--- a/wercker.yml
+++ b/wercker.yml
@@ -90,7 +90,7 @@ deploy:
         cwd: $WERCKER_OUTPUT_DIR/app
         username: $USERNAME
         password: $PASSWORD
-        repository: dotnetcoreservices/locationservice
-        registry: https://registry.hub.docker.com
+        repository: senakafdo/locationservice
+        registry: https://registry.hub.docker.com/v2
         entrypoint: "/pipeline/source/app/docker_entrypoint.sh"
         
